模块化重构：Flink代码迁移至flink-data-transformer-module，新增ai-analysis-module，完善多模块架构
- 新增 ai-analysis-module 子模块，基于 Spring Boot 实现 LLM 智能化应用性能分析
  - 集成 OpenAI API，提供智能性能异常检测和优化建议
  - 支持 ClickHouse 数据查询和分析报告存储
  - 提供 RESTful API 接口，支持异步分析和报告检索

- 新增 flink-data-transformer-module 子模块，实现 Flink 数据流处理功能
  - 迁移所有 Flink 相关源码、测试、配置文件和 proto 定义
  - 创建 FlinkKafkaToClickHouseJob 作为主入口，支持 Kafka 到 ClickHouse 的数据流处理
  - 独立 Maven 配置，包含 Shade Plugin 和完整依赖管理

- 主项目结构优化
  - pom.xml 重构为多模块管理，移除具体业务依赖，专注于版本和依赖管理
  - 更新 .gitignore，排除构建产物和临时文件
  - 更新 README.md，反映新的多模块架构和使用方式

- 文档和配置完善
  - 各子模块独立 README 文档，详细说明功能特性和使用方法
  - 保留原有 hardMap.xml、logicMap.xml 等配置文件，并移至 docs 目录
  - 新增可观测性工程相关文档和架构设计文档